--- a/.env
+++ b/.env
@@ -26,5 +26,6 @@ CONTRACT_HOUSE_MARKET_POLYGON="0xBb5966daF83ec4D3f168671a464EB18430EeA3be"
 CONTRACT_HOUSE_MARKET_BSC="0x049896f350C802CD5C91134E5f35Ec55FA8f0108"
 CONTRACT_HERO_MARKET_BSC="0x376A10E7f125A4E0a567cc08043c695Cd8EDd704"
 
-OPEN_SEA_KEY=""
+OPEN_SEA_KEY="d053c6b055a24be0940c2d3850b66310"
+ETHERSCAN_KEY="1JDNI6GIS3R7DA8VIEF43KYHGT9W1K6GWP"
 NODE_ENV=production
